🔒️ 从仓库中删除敏感数据

--- a/source/_posts/面试记录-持续更新.md
+++ b/source/_posts/面试记录-持续更新.md
@@ -3,6 +3,8 @@ title: 面试记录-持续更新
 tags:
 ---
 
+[从仓库中删除敏感数据](https://docs.github.com/cn/github/authenticating-to-github/removing-sensitive-data-from-a-repository)
+
 ## 1
 
 - HTML
