--- a/source/_posts/暂存区.md
+++ b/source/_posts/暂存区.md
@@ -204,8 +204,28 @@ var b = function() {
 
 #### for in 与可枚举属性；for of 与迭代器、可迭代对象
 [可枚举属性](/blog/2022/05/03/JS-defineProperty/#可枚举属性) [可迭代对象](/blog/2021/10/02/ES6%20合集/#可迭代协议)
-#### 不定参数函数的语法，手写。在 es6 之前没有这种语法，怎么解决（arguments？）
+
+#### 不定参数数量的函数的语法
+在函数形参前加入 `...` 表明这个参数是剩余参数。这种语法是 ES6 新增的
+```js
+function (a, ...rest) {
+  console.log(rest)
+}
+```
+这个剩余参数会是一个 `Array` 类型，可以做任何数组操作
+
+在 ES6 之前，则是通过 `arguments` 这个「局部变量」实现的。
+`arguments` 用于引用函数的实际参数（而不是形式参数），它是一个对象
+- 可迭代，实现了 `Symbol.iterator`
+- 有 length 属性，且属性的索引从 `0` 开始，所以是 Array-like
+- 没有 `Array` 的内置方法，比如 `map`、`forEach`
+
+由于是可迭代对象，可以用 `Array.from` 或者 `[arguments...]` 展开语法转为 `Array`
+[可迭代对象](/blog/2021/10/02/ES6%20合集/#可迭代协议)
+
 #### js 的数值
+[JS 的数值](/blog/2021/04/20/JS%20的数值/)
+
 #### 正则
 #### 对新数据类型的了解：Symbol, Set, Map
 #### Array 有哪些方法，哪些改变原数组
