--- a/source/_posts/暂存区.md
+++ b/source/_posts/暂存区.md
@@ -231,10 +231,22 @@ function (a, ...rest) {
 #### Array 有哪些方法，哪些改变原数组
 #### 深拷贝、浅拷贝，手写
 #### es6 及以上新增的特性，口喷有哪些特性
-#### event loop、宏任务、微任务 公众号文章
+#### event loop、宏任务、微任务
+[事件循环](/blog/2020/04/13/JS-事件循环/)
+
+#### 什么是闭包
+
+- 一个函数
+- 能访问上一层执行上下文的变量，即使上一层执行上下文已经被销毁
+
 #### 各个 observer 名字、读法，手写用法 MutationObserver、IntersectionObserver、PerformanceObserver
 #### 如何中断 xhr 请求
-#### defineProperty 和 proxy 的用法（Vue 23 吹逼用）
+#### defineProperty 和 proxy 的用法（Vue 23）
+define 缺陷：无法监听属性的 delete
+
+reactive 用 Proxy，ref 用 setter
+reactive 和 ref 区别（所谓的 reactive 有坑 是指监听基本数据类型时不能双向绑定到 view？）
+
 #### setTimeout 的 this 问题 mdn
 #### Promise.race 、all ，如果某一个 reject 了是什么样
 #### 异步处理的演进：Callback，Promise, Generator, Async Await 的了解程度, 可以深入的问题实现，看候选人能会到哪个程度，可以拓展到 event loop，微任务，宏任务，还可以聊到浏览器线程，web worker 之类的，可以有具体的题目
@@ -289,9 +301,11 @@ setTimeout
 #### webpack 与 vite
 #### 补充那片博文，commonJS AMD 都要写完
 
-### HTML
-1. meta 标签是啥。引申打开 tatter.com 前10行 HTML 标签是干嘛的
+### 浏览器相关
+1. meta 标签是啥。引申打开 twitter.com 前10行 HTML 标签是干嘛的
 2. shadow dom、web component
+3. 缓存 disk cache memory cache
+4. prefetch preload
 
 ### 框架运用以及理解能力 vue react angular
 
