--- a/source/_posts/暂存区.md
+++ b/source/_posts/暂存区.md
@@ -302,10 +302,12 @@ setTimeout
 #### 补充那片博文，commonJS AMD 都要写完
 
 ### 浏览器相关
-1. meta 标签是啥。引申打开 twitter.com 前10行 HTML 标签是干嘛的
-2. shadow dom、web component
-3. 缓存 disk cache memory cache
-4. prefetch preload
+#### meta 标签是啥。引申打开 twitter.com 前10行 HTML 标签是干嘛的
+#### shadow dom、web component
+#### 缓存 disk cache memory cache
+#### prefetch preload
+#### 跨域
+[跨域与同源策略](/blog/2021/10/22/同源策略与跨域/)
 
 ### 框架运用以及理解能力 vue react angular
 
