--- a/source/_posts/暂存区.md
+++ b/source/_posts/暂存区.md
@@ -228,8 +228,11 @@ function (a, ...rest) {
 
 #### 正则
 #### 对新数据类型的了解：Symbol, Set, Map
+[Symbol](/blog/2021/10/02/ES6%20合集/#Symbol) [Map 与 Set](/blog/2021/10/02/ES6%20合集/#Map-与-Set)
 #### Array 有哪些方法，哪些改变原数组
 #### 深拷贝、浅拷贝，手写
+考虑广度优先遍历、深度优先遍历
+
 #### es6 及以上新增的特性，口喷有哪些特性
 #### event loop、宏任务、微任务
 [事件循环](/blog/2020/04/13/JS-事件循环/)
