优化排版、错别字

--- a/source/_posts/正则表达式.md
+++ b/source/_posts/正则表达式.md
@@ -17,7 +17,7 @@ tags: [正则表达式]
 - 纵向匹配的扩展：字符组——一个字符的集合
 	- `-` 表示范围
 		- `/[a-d2-5D-I]/` 是 `[abcd2345DHI]` 的省略简写模式
-		- 转意问题：`\-` 用来匹配 `-` 字符本身
+		- 转义问题：`\-` 用来匹配 `-` 字符本身
 	- `^` 表示取反
 		- `/[^abc]/` 可以匹配 `x` 但不匹配 `a`、`b`、`c`
 		- Q：^ 只能放在纵向匹配方括号中吗？
@@ -41,7 +41,7 @@ tags: [正则表达式]
 	- 贪婪匹配和惰性匹配
 		- 在量词后边加`?`可以改为惰性匹配
 		- Q：差别不是特别清楚 贪婪匹配会匹配出尽可能长的字符串，惰性则是尽可能短的，符合匹配就返回
-		- `/\d{2,4}/g` 匹配 `123 1234 12345 123456` 结果：`123 1234 1234 1234 156` 
+		- `/\d{2,4}/g` 匹配 `123 1234 12345 123456` 结果：`123 1234 1234 1234 56` 
 		- `/\d{2,4}?/g` 匹配 `123 1234 12345 123456` 结果： `12 12 34 12 34 12 34 56`
 		- `/\d+/` 匹配 `123 2` 结果：`123 2`
 		- `/\d+?/` 匹配 `123 2` 结果：`1 2 3 2`
@@ -60,10 +60,11 @@ tags: [正则表达式]
 匹配位置就是匹配这些空字符串，这些空字符串可以做**替换**
 
 - `^` `$` 匹配开头结尾
-	- 把字符串的开头/结尾替换成# `'hello'.replace(/^|$/g, '#') // '#hello$'`
+	- 把字符串的开头/结尾替换成# `'hello'.replace(/^|$/g, '#') // '#hello#'`
 	- 多行匹配时，两个字符是**行**的开头结尾
 ```js
-	'hello\nworld'.replace(/^|$/, '#')
+	// g: 全局匹配，m: 多行匹配
+	'hello\nworld'.replace(/^|$/gm, '#')
 	/*
 	*	#hello#
 	*	#world#
@@ -111,7 +112,8 @@ tags: [正则表达式]
 	- `/(?!^)(?=(\d{3})+$)/` 可以替换出 `123,456,789`
 	- ::位置匹配如何做到「非」？::  ::两个位置连用 代表对同一个位置的「且」？::看上去两个位置连用的确表示一起描述同一个位置
 
-扩展：要求匹配’123456 12345678‘
+扩展：要求匹配 `123456 12345678`
+
 `/\B(?=(\d{3})+\b)/g`
 
 
@@ -135,11 +137,11 @@ tags: [正则表达式]
 `RegExp.prototype.exec`、`String.prototype.match`、`String.prototype.replace` 三个函数都会得到一个数组（前两个是返回值，后一个会传给 lambda 的入参）
 ```js
 	/(\d{4})-(\d{2})-(\d{2})/.exec('2021-04-29')
-	// ["2021-04-29", "2021", "04", "29", index: 0, input: "2021-04-29 2021-05-01", groups: undefined]
+	// ['2021-04-29', '2021', '04', '29', index: 0, input: '2021-04-29', groups: undefined]
 ```
 其中1～3个元素就是括号提取出的数据，第0个表示正则表达式匹配到的字符串。
 
-> 另外提一句，这也是我第一次知道**JS 的数组可以被添加属性**，Array 是 Object 的实例，自带 `length` 属性，也可以像上边的返回值一样增加 index、input 属性。  
+> 另外提一句，返回值是一个**添加了自定义属性**的数组。Array 是 Object 的实例，自带 `length` 属性，也可以像这里的返回值一样增加 `index`、`input`、`groups` 属性。  
 
 前边的例子中，调用 `replace` 之后也可以通过 `RegExp.$1` `RegExp.$2 ` `RegExp.$3` 拿到对应三个数据，不过这种方式已经*废弃*。这种实例能改变对象本身的变量，设计也很奇怪，不再深究。
 
@@ -161,12 +163,11 @@ tags: [正则表达式]
 - 引用不存在的分组时，`\1` 保持字面意思，代表一个字符
 
 > 再另外提一句，在 JS 的字符串中，反斜杠`\`有转义的作用  
-> 0. 转义字符：`\0 \b \f \n \r \t \v \' \" \\`  
-> 1. `\HHH` 后边跟三个 `000` 到 `377` 的**八进制**数代表一个字符，`HHH` 代表对应 Unicode 码点(code point)，一共能输出256种字符。  
-> `\1 === \001` 遵循这个规则  
-> 2. `\xHH` 后边跟 `00` 到 `FF` 的**十六进制**数，同样代表对应 Unicode 码点，能输出256种字符  
-> 3. `\uXXXX` 后边也跟 `0000` 到 `FFFF` 的**十六进制数**，`XXXX` 代表对应码点  
-> 4. 如果反斜杠后边不是特殊字符，则反斜杠会被省略 `'\a' === 'a'`  
+> 1. 转义字符：`\0 \b \f \n \r \t \v \' \" \\`  
+> 2. `\HHH` 后边跟三个 `000` 到 `377` 的**八进制**数代表一个字符，`HHH` 代表对应 Unicode 码点(code point)，一共能输出256种字符。`\1 === \001` 遵循这个规则  
+> 3. `\xHH` 后边跟 `00` 到 `FF` 的**十六进制**数，同样代表对应 Unicode 码点，能输出256种字符  
+> 4. `\uXXXX` 后边也跟 `0000` 到 `FFFF` 的**十六进制数**，`XXXX` 代表对应码点  
+> 5. 如果反斜杠后边不是特殊字符，则反斜杠会被省略 `'\a' === 'a'`  
 
 ```js
   '\172' === 'z' // true
