seo 优化：图片加 alt 属性；增加 keywords 和 description meta；清理覆盖率低，包体又大的 css

--- a/source/_posts/同源策略与跨域.md
+++ b/source/_posts/同源策略与跨域.md
@@ -13,13 +13,13 @@ tags: [浏览器]
 首先要知道，在浏览器打开两个网页（标签/窗口），在同源时是可以相互交互的：
 以本博客首页为例：源都为 `https://imbant.github.io/`，在首页 `/blog/` 打开控制台，调用 `window.open` 打开 `/blog/archives/` 到归档，可见：
 `window.open` 会返回被打开页面的 `Window` 对象，而被打开的页面 `window.opener` 指向前一个页面的 `Window` 对象。
-![](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/12/%E6%88%AA%E5%B1%8F2021-10-26%20%E4%B8%8B%E5%8D%882.23.23.png)
+![img](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/12/%E6%88%AA%E5%B1%8F2021-10-26%20%E4%B8%8B%E5%8D%882.23.23.png)
 
 这两个暴露在其他页面的 Window 对象，是可以正常访问，执行内部方法并影响到真正的页面的：
-![](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/12/%E6%88%AA%E5%B1%8F2021-10-26%20%E4%B8%8B%E5%8D%882.29.35.png)
+![img](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/12/%E6%88%AA%E5%B1%8F2021-10-26%20%E4%B8%8B%E5%8D%882.29.35.png)
 
 因此可以进行 DOM 操作：
-![](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/12/%E6%88%AA%E5%B1%8F2021-10-26%20%E4%B8%8B%E5%8D%882.30.53.png)
+![img](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/12/%E6%88%AA%E5%B1%8F2021-10-26%20%E4%B8%8B%E5%8D%882.30.53.png)
 
 非常危险的操作。试想如果没有同源限制，打开一个钓鱼网站和银行官网，钓鱼网站可以随意获取账号密码信息。
 
