--- a/source/_posts/暂存区.md
+++ b/source/_posts/暂存区.md
@@ -16,7 +16,7 @@ toc: true
     `header` `nav` `main` `section` `article` `details` `figure` `footer`
     为什么：对开发者，提高可读性；对浏览器，有利于 SEO（根据标签确定上下文和关键字权重），有利于可访问性/无障碍（视障用户的屏幕阅读器等辅助功能）；即使 CSS 未加载，仍能看懂 HTML 结构。
     怎么用：在符合语义化的地方用语义化标签代替 div，注意，它们的默认样式都是：`display: block`
-    ![](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/2/2020-%E5%BA%94%E8%81%98.gif)
+    ![img](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/2/2020-%E5%BA%94%E8%81%98.gif)
 
 - CSS
 
