--- a/source/_posts/前端性能监控指标与实现.md
+++ b/source/_posts/前端性能监控指标与实现.md
@@ -10,7 +10,7 @@ tags: [浏览器, JS]
 ## Navigation Timing 标准
 W3C 提供了测试 Web App 性能特征的[规范](https://www.w3.org/TR/navigation-timing-2/)，和时间模型：
 
-![](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/1/%E5%89%8D%E7%AB%AF%E6%80%A7%E8%83%BD%E7%9B%91%E6%8E%A7%E6%8C%87%E6%A0%87%E4%B8%8E%E5%AE%9E%E7%8E%B0.svg)
+![img](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/1/%E5%89%8D%E7%AB%AF%E6%80%A7%E8%83%BD%E7%9B%91%E6%8E%A7%E6%8C%87%E6%A0%87%E4%B8%8E%E5%AE%9E%E7%8E%B0.svg)
 
 ## 浏览器实现
 ### window.performance 对象
@@ -87,7 +87,7 @@ FCP：首次内容绘制，首次向屏幕传输内容
 </body>
 ```
 performance 已经标准化：
-![](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/1/%E5%89%8D%E7%AB%AF%E6%80%A7%E8%83%BD%E7%9B%91%E6%8E%A7%E6%8C%87%E6%A0%87%E4%B8%8E%E5%AE%9E%E7%8E%B02.jpg)
+![img](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/1/%E5%89%8D%E7%AB%AF%E6%80%A7%E8%83%BD%E7%9B%91%E6%8E%A7%E6%8C%87%E6%A0%87%E4%B8%8E%E5%AE%9E%E7%8E%B02.jpg)
 可见 FCP 要比 FP 晚一些（与 `document.write` 执行的时间相关），两者也可能相同。
 
 此外：
