--- a/source/_posts/命令行选项标准.md
+++ b/source/_posts/命令行选项标准.md
@@ -6,7 +6,7 @@ tags: [linux]
 
 在查找`git push`命令的文档时看到了下面的内容：
 
-![](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/4/%E5%91%BD%E4%BB%A4%E8%A1%8C%E9%80%89%E9%A1%B9%E6%A0%87%E5%87%86.png)
+![img](https://imbant-blog.oss-cn-shanghai.aliyuncs.com/blog-img/4/%E5%91%BD%E4%BB%A4%E8%A1%8C%E9%80%89%E9%A1%B9%E6%A0%87%E5%87%86.png)
 
 顺手查了一下这种描述方式的语法和名称，基于[这个规范](https://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap12.html)做一些总结。
 
