--- a/source/_posts/暂存区.md
+++ b/source/_posts/暂存区.md
@@ -176,7 +176,7 @@ toc: true
 ```js
 console.log(a) // undefined
 var a = 1
-console.log(a) // undefined
+console.log(a) // 1
 ```
 这种在编译阶段放到内存中的特性，隐式地等于下边的写法
 ```js
@@ -373,8 +373,26 @@ setTimeout
 4. 性能优化方面的内容: 优化的指标是什么，做了哪些优化工作
 5. 问问平时会不会用 Google，会不会看一些英文文档
 
-### 项目经验评估
+## 7
 
-1. 用到 TS 的项目可以问一些 ts 方面的东西
-2. 用到 SSR 的项目，可以问一下相关内容
-3. 如果有 node 相关的可以问一些偏后端的问题
+### Electron
+
+（来自 Electron China 社区）
+
+1. 签名 公证
+2. electron-builder遇到过哪些问题，如何解决的。
+   1. unpacked 作用
+   2. files filter 作用
+3. asar 的作用
+4. 如何在 renderer 使用 cookies
+5. Context Isolation 了解多少，为什么 electron 不推荐在 renderer 层直接调用 node api
+6. nsis 了解多少
+7. 如何调试 electron 的
+8. 应用更新是怎么做的
+    1. 衍生出 blockmap的作用、增量更新
+9. 多个窗口如何通信。
+10. 在编写主进程时需要注意什么
+    1. 为什么不推荐在主进程使用 *Sync方法
+11. 应用 crash 时怎么办？如何监听
+12. session
+    1. 拦截/修改网络请求的话应该session会很常用的
